--- a/all/finales/fin4.html
+++ b/all/finales/fin4.html
@@ -27,7 +27,7 @@
             Fin.
         </h3>
 
-        <a href="index.html">Volver al inicio.</a>
+        <a href="..\..\index.html">Volver al inicio.</a>
     </section>
 </body>
 </html>
