--- a/all/finales/fin8.html
+++ b/all/finales/fin8.html
@@ -30,7 +30,7 @@
         <h3>
             Fin.
         </h3>
-        <a href="index.html">Volver al inicio.</a>
+        <a href="..\..\index.html">Volver al inicio.</a>
     </section>
 </body>
 </html>
