--- a/all/mercado/centro.html
+++ b/all/mercado/centro.html
@@ -19,8 +19,8 @@
 </p>
 
 <section>
-    <li><a href="all\finales\fin5.html">Aceptar la oportunidad. </a></li>
-    <li><a href="all\finales\fin6.html"> Quedarse en el río, ignorándolo. </a>
+    <li><a href="..\..\all\finales\fin5.html">Aceptar la oportunidad. </a></li>
+    <li><a href="..\..\all\finales\fin6.html"> Quedarse en el río, ignorándolo. </a>
 </section>
 
 </body>
