--- a/all/mercado/marcharme.html
+++ b/all/mercado/marcharme.html
@@ -20,8 +20,8 @@
     </p>
 
     <section>
-        <li><a href="all\trabajo\postular.html">Postularme para el trabajo. </a></li>
-        <li><a href="all\finales\fin4.html"> Ignorar el cartel y seguir caminando.  </a>
+        <li><a href="..\..\all\trabajo\postular.html">Postularme para el trabajo. </a></li>
+        <li><a href="..\..\all\finales\fin4.html"> Ignorar el cartel y seguir caminando.  </a>
     </section>
 </body>
 </html>
