--- a/all/mercado/mercado.html
+++ b/all/mercado/mercado.html
@@ -17,8 +17,8 @@
     </p>
 
     <section>
-        <li><a href="all\trabajo\aceptar trabajo.html">Aceptar el trabajo y ahorrar. </a></li>
-        <li><a href="all\mercado\marcharme.html">Decidir que el trabajo es inútil y marcharme. </a>
+        <li><a href="..\..\all\trabajo\aceptar trabajo.html">Aceptar el trabajo y ahorrar. </a></li>
+        <li><a href="..\..\all\mercado\marcharme.html">Decidir que el trabajo es inútil y marcharme. </a>
     </section>
 </body>
 </html>
