--- a/all/trabajo/aceptar trabajo.html
+++ b/all/trabajo/aceptar trabajo.html
@@ -20,8 +20,8 @@
     </p>
 
     <section>
-        <li><a href="all\finales\fin2.html">Aplicar a la beca.  </a></li>
-        <li><a href="all\finales\fin3.html">Seguir vendiendo plátanos.  </a>
+        <li><a href="..\..\all\finales\fin2.html">Aplicar a la beca.  </a></li>
+        <li><a href="..\..\all\finales\fin3.html">Seguir vendiendo plátanos.  </a>
     </section>
 </body>
 </html>
