--- a/all/trabajo/postular.html
+++ b/all/trabajo/postular.html
@@ -17,8 +17,8 @@
     </p>
 
     <section>
-        <li><a href="all\finales\fin7.html">Intentar participar </a></li>
-        <li><a href="all\finales\fin8.html"> Ignorar el cartel y seguir con mi trabajo.  </a>
+        <li><a href="..\..\all\finales\fin7.html">Intentar participar </a></li>
+        <li><a href="..\..\all\finales\fin8.html"> Ignorar el cartel y seguir con mi trabajo.  </a>
     </section>
 </body>
 </html>
