--- a/all/trabajo/rio.html
+++ b/all/trabajo/rio.html
@@ -20,8 +20,8 @@
 </p>
 
 <section>
-    <li><a href="all\mercado\centro.html">Preguntarle más sobre el centro y decidir ir. </a></li>
-    <li><a href="all\finales\fin1.html"> Quedarse en el río, ignorándolo. </a>
+    <li><a href="../../all/mercado/centro.html">Preguntarle más sobre el centro y decidir ir. </a></li>
+    <li><a href="../../all/finales/fin1.html"> Quedarse en el río, ignorándolo. </a>
 </section>
 
 </body>
