--- a/all/finales/fin2.html
+++ b/all/finales/fin2.html
@@ -25,6 +25,6 @@
     <h3>
         Fin.
     </h3>
-    <a href="index.html">Volver al inicio.</a>
+    <a href="..\..\index.html">Volver al inicio.</a>
 </body>
 </html>
