--- a/all/finales/fin3.html
+++ b/all/finales/fin3.html
@@ -21,7 +21,7 @@
 
     <section>
         <h3>Fin.</h3>
-        <a href="index.html">Volver al inicio.</a>
+        <a href="..\..\index.html">Volver al inicio.</a>
     </section>
 </body>
 </html>
