--- a/all/finales/fin7.html
+++ b/all/finales/fin7.html
@@ -27,7 +27,7 @@
         <h3>
             Fin.
         </h3>
-        <a href="index.html">Volver al inicio.</a>
+        <a href="..\..\index.html">Volver al inicio.</a>
     </section>
 </body>
 </html>
